fix: layout issue

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -24,6 +24,9 @@
   right: 0;
   box-sizing: border-box;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  z-index: 1;
+  max-height: 400px;
+  overflow: auto;
 }
 .item-search {
   padding: 0 12px;
